
syntax = "proto3";

package sample.proto.complex;

enum MessageType {
  TYPE_UNSPECIFIED = 0;
  TYPE_A = 1;
  TYPE_B = 2;
  TYPE_C = 3;
}

enum MessageStatus {
  STATUS_UNSPECIFIED = 0;
  STATUS_ACTIVE = 1;
  STATUS_INACTIVE = 2;
  STATUS_DELETED = 3;
}